Start adding my own content
My name and a draft tagline

--- a/resume.tex
+++ b/resume.tex
@@ -46,8 +46,10 @@
 
 \begin{document}
 
-\name{Dr. Nico Krieger}
-\tagline{Amazing tag line that makes HR managers want to hire you immediately.\\The tag line is aligned with the bottom of the picture to the right, so if you have\\multiple lines it fills the space to your name from the bottom. You might want to\\introduce manual line breaks to make this look nicer then simply filling up the lines.}
+\name{David Richfield}
+\tagline{Process Engineer and Biochemist\\
+  New product development expert with 15 years' experience in the food industry\\
+  Team leader with experience in international project management}
 \photo[round]{picture.jpg}{\dimexpr \headerheight-\marginbottom}   % make photo exactly match the header with margintop/marginright/marginbottom as margin
 
 \makeheader
