--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \colorlet{highlightbarcolor}{lightgray}
-\colorlet{headerbarcolor}{darkgray}
+\colorlet{headerbarcolor}{CadetBlue}
 
 \colorlet{headerfontcolor}{white}
 \colorlet{accent}{awesome-red}
