--- a/resume.tex
+++ b/resume.tex
@@ -30,10 +30,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \colorlet{highlightbarcolor}{lightgray}
-\colorlet{headerbarcolor}{CadetBlue}
-
 \colorlet{headerfontcolor}{white}
-\colorlet{accent}{awesome-red}
+\colorlet{accent}{DarkGreen}
+\colorlet{headerbarcolor}{accent!40!gray}
 \colorlet{heading}{black}
 \colorlet{emphasis}{black}
 \colorlet{body}{black}
