--- a/resume.tex
+++ b/resume.tex
@@ -57,31 +57,26 @@
 
     \section{Contact}
     
-    \email{mail@mailprovider.com}
-    \phone{+49 123 456789}
-    \location{Some Street 1, 12345 City Name}
+    \email{davidrichfield@gmail.com}
+    \phone{+49 176 7266 3368}
+    \location{Nabburgerstraße 8, 67549 Worms}
     \vspace{0.5em}
-    \homepage{nicokrieger.com}{https://www.nicokrieger.de}
-    \github{@GiantMolecularCloud}{https://github.com/giantmolecularcloud}
-    \linkedin{Nico Krieger}{https://www.linkedin.com/in/nico-krieger-6b28151b2/}
-    \orcid{0000-0003-1104-2014}{https://www.orcid.org/0000-0003-1104-2014}
-    \ads{NASA/ADS publication list}{https://ui.adsabs.harvard.edu/search/fq=\%7B!type\%3Daqp\%20v\%3D\%24fq\_database\%7D&fq\_database=database\%3A\%20astronomy&p\_=0&q=pubdate\%3A\%5B2016-01\%20TO\%209999-12\%5D\%20author\%3A(\%22Krieger\%2C\%20Nico\%22)&sort=date\%20desc\%2C\%20bibcode\%20desc}
+    \homepage{Wikipedia}{https://en.wikipedia.org/wiki/User:Slashme}
+    \github{@Slashme}{https://github.com/slashme}
+    \linkedin{David Richfield}{https://www.linkedin.com/in/david-richfield-5938714/}
     
     \section{Skills}
     
-    \skillsection{Programming}
-    \skill{Python}{5}
-    \skill{Bash}{4}
-    \skill{C++}{2}
-    \skill{Apple Script}{3}
-    \skill{HTML/CSS}{3}
-    \skill{LaTeX}{4}
+    \skillsection{Product Development}
+    \skill{Confectionery}{5}
+    \skill{Supplements}{4}
+    \skill{Pharmaceutical}{3}
     
     \vspace{0.5em}
-    \skillsection{Operating Systems}
-    \skill{Linux}{4}
-    \skill{MacOS}{5}
-    \skill{Windows}{3}
+    \skillsection{Management}
+    \skill{Project}{5}
+    \skill{Team}{4}
+    \skill{International}{5}
     
     \vspace{0.5em}
     \skillsection{Software \& Tools}
