--- a/resume.tex
+++ b/resume.tex
@@ -68,39 +68,38 @@
     \section{Skills}
     
     \skillsection{Product Development}
+    \skill{Innovation}{5}
+    (Ideation, prioritisation,\\ internal marketing)\\
     \skill{Confectionery}{5}
     \skill{Supplements}{4}
     \skill{Pharmaceutical}{3}
     
     \vspace{0.5em}
     \skillsection{Management}
-    \skill{Project}{5}
-    \skill{Team}{4}
-    \skill{International}{5}
+    \skill{Project management}{5}
+    (Stage-gate model, risk and time management)\\
+    \skill{Team leadership}{4}
+    \skill{International project\\management}{5}
+    \skill{Portfolio management}{5}
+    (Ingredient and product rationalisation, product database design, supplier management)\\
     
     \vspace{0.5em}
-    \skillsection{Software \& Tools}
-    \skill{Visualisation}{5}
-    (e.g. matplotlib, gnuplot, ...)\\
-    \skill{Data handling/analysis}{5}
-    (e.g. numpy, scipy, pandas, ...)\\
-    \skill{Docker}{3}
-    \skill{Office}{4}
-    
-    \vspace{0.5em}
-    \skillsection{Another skill subsection header}
-    You can also put simply text here without the dots.
+    \skillsection{Technical}
+    \skill{Product commercialisation}{5}
+    (Project management, factory support, troubleshooting)\\
+    \skill{Plant design}{4}
+    (Design, construction, commissioning)\\
+    \skill{Statistical Process Control}{4}
     
     \vspace{0.5em}
     \skillsection{Languages}
-    \skill{German}{5}
     \skill{English}{5}
+    \skill{Afrikaans}{5}
+    \skill{German}{4}
+    \skill{Dutch}{3}
     \skill{French}{2}
     \bigskip
     
-    \section{Certificates}
-    \simpleskill{AWS certified cloud practitioner}
-
 }
 \mainbar{
     \section{About this template}
