More skills tweaking

--- a/resume.tex
+++ b/resume.tex
@@ -67,37 +67,41 @@
     
     \section{Skills}
     
+    \skillsection{Management}
+    \skill{Training and\\knowledge transfer}{5}
+    \skill{Team leadership}{4}
+    \skill{Project management}{5}
+    (Stage-gate model, risk and time management)\\
+    \skill{International project\\management}{5}
+    \skill{Portfolio management}{5}
+    (Ingredient and product rationalisation, product database design, supplier management)\\
+    \vspace{0.5em}
+    
     \skillsection{Product Development}
     \skill{Innovation}{5}
     (Ideation, prioritisation,\\ internal marketing)\\
     \skill{Confectionery}{5}
     \skill{Supplements}{4}
     \skill{Pharmaceutical}{3}
-    
     \vspace{0.5em}
-    \skillsection{Management}
-    \skill{Project management}{5}
-    (Stage-gate model, risk and time management)\\
-    \skill{Team leadership}{4}
-    \skill{International project\\management}{5}
-    \skill{Portfolio management}{5}
-    (Ingredient and product rationalisation, product database design, supplier management)\\
     
-    \vspace{0.5em}
     \skillsection{Technical}
     \skill{Product commercialisation}{5}
     (Project management, factory support, troubleshooting)\\
     \skill{Plant design}{4}
     (Design, construction, commissioning)\\
     \skill{Statistical Process Control}{4}
-    
+    \skill{Analytical methods}{4}
+    (Chromatography, physical and organic chemistry)\\
     \vspace{0.5em}
+    
     \skillsection{Languages}
     \skill{English}{5}
     \skill{Afrikaans}{5}
     \skill{German}{4}
     \skill{Dutch}{3}
     \skill{French}{2}
+    \skill{Russian}{1}
     \bigskip
     
 }
