Update tagline, create professional summary section

--- a/resume.tex
+++ b/resume.tex
@@ -47,7 +47,7 @@
 
 \name{David Richfield}
 \tagline{Process Engineer and Biochemist\\
-  New product development expert with 15 years' experience in the food industry\\
+  New product development expert\\
   Team leader with experience in international project management}
 \photo[round]{picture.jpg}{\dimexpr \headerheight-\marginbottom}   % make photo exactly match the header with margintop/marginright/marginbottom as margin
 
@@ -61,8 +61,6 @@
     \phone{+49 176 7266 3368}
     \location{Nabburgerstraße 8, 67549 Worms}
     \vspace{0.5em}
-    \homepage{Wikipedia}{https://en.wikipedia.org/wiki/User:Slashme}
-    \github{@Slashme}{https://github.com/slashme}
     \linkedin{David Richfield}{https://www.linkedin.com/in/david-richfield-5938714/}
     
     \section{Skills}
@@ -74,7 +72,7 @@
     (Stage-gate model, risk and time management)\\
     \skill{International project\\management}{5}
     \skill{Portfolio management}{5}
-    (Ingredient and product rationalisation, product database design, supplier management)\\
+    (Ingredient rationalisation, product database design, supplier management)\\
     \vspace{0.5em}
     
     \skillsection{Product Development}
@@ -101,13 +99,16 @@
     \skill{German}{4}
     \skill{Dutch}{3}
     \skill{French}{2}
+    \skill{Spanish}{2}
     \skill{Russian}{1}
     \bigskip
     
 }
 \mainbar{
-    \section{About this template}
-    Section are set in bold face. An optional parameter of \texttt{\textbackslash section} takes a symbol to add in front of the text. This option is used in the jobs and education sections below.
+    \section{Professional Summary}
+    I am an NPD expert with over 15 years' experience in bringing innovative confectionery, supplement and food products to market in 8 countries on 3 continents.\\
+    I have a passion for mentoring, empowering and developing talent, which shows in my track record of effective team leadership.\\
+    I am a technical expert, always keen to share my expertise. I have held highly impactful training sessions for internal teams as well as B2B customers at my last two companies.
     
     \section[\faGears]{Work history}
     \job{date}
@@ -144,16 +145,6 @@
     \medskip
     Tags must be ordered by hand with newlines to get a nice layout, especially for long tags.
     
-    \section{Wheel Chart}
-    % This is taken from AltaCV
-    % see https://github.com/liantze/AltaCV for details
-    \wheelchart{1.5cm}{0.5cm}{% outer and inner diameter
-        6/8em/accent!20/Sleep,          % comma-separated list of
-        8/8em/accent!40/Daytime job,    % fraction of 24 / line length / color / label
-        2/8em/accent!80/Training,          % here, the color is shades of the accent color
-        3/8em/accent!60/Recovering from fighting criminals,
-        5/8em/accent/Being Batman
-    }
 }
 \makebody
 \clearpage
