Updating work history

--- a/resume.tex
+++ b/resume.tex
@@ -111,14 +111,79 @@
     I am a technical expert, always keen to share my expertise. I have held highly impactful training sessions for internal teams as well as B2B customers at my last two companies.
     
     \section[\faGears]{Work history}
-    \job{date}
-        {Employer name and city}
-        {Position Title}
-        {Additional details for this position. Can be left empty to omit this line}
-    \job{01/2020 - 12/2020}
-        {An employer with a long name,\\City in new line}
-        {Previous position}
-        {}
+    \job{Mar. 2018---Present}
+        {Südzucker AG, Neuoffstein}
+        {Senior Manager,\\Confectionery Technology}
+        {\begin{itemize}
+            \item Leading confectionery application development team
+            \item Delivering customer-focused and strategic
+              development projects
+            \item Supporting Marketing in developing sales tools and
+              marketing campaign materials
+            \item Providing technical guidance and leadership on
+              confectionery applications to Nutritional Communications
+              team
+            \item Supporting the Customer Technical Service team in
+              providing solutions to our customers
+            \item Providing training on production technology and
+              product attributes to key customers and at workshops
+              (e.g. training on glass transition phenomena at
+              technical school)
+            \item Mentoring students and trainees in their academic
+              and professional development
+            \item Creating, writing and defending patents
+            \item Statistical evaluation to support data-driven
+              decision making in evaluating quality of product
+              produced by co-packer
+        \end{itemize}}
+
+    \job{Sep. 2013---Dec. 2017}
+        {Mondelēz International,\\Munich}
+        {Senior Scientist}
+        {\begin{itemize}
+            \item Productivity project manager
+            \begin{itemize}
+                \item Global track lead in project to optimise our
+                  portfolio of flavours in chocolate and biscuits
+                \item Delivered over 7 MM USD savings while reducing
+                  portfolio of over 500 flavours by over 70\%
+            \end{itemize}
+            \item EU hard candy design expert
+            \begin{itemize}
+                \item Implemented new hard candy format, including
+                  specification of plant equipment, setting new
+                  quality specifications with statistically valid
+                  sampling criteria
+                \item Design and commercialisation of new candy
+                  products (some still in market)
+                \item Troubleshooting production issues in 3 countries
+            \end{itemize}
+        \end{itemize}}
+    
+    \job{Nov. 2008---Aug. 2013}
+        {Cadbury / Kraft / Mondelēz,\\Johannesburg}
+        {Senior Scientist}
+        {\begin{itemize}
+            \item Candy senior scientist
+            \begin{itemize}
+                \item Regional hard candy expert: product and process development, troubleshooting
+                \item Candy R&D lead for consolidation of 3 manufacturing facilities in MENA
+            \end{itemize}
+            \item R&D development team leader
+            \begin{itemize}
+                \item Project management
+                \item Team leadership
+            \end{itemize}
+        \end{itemize}}
+
+}
+\makebody
+\clearpage
+
+
+\pagestyle{highlightmain}
+\highlightbar{}
+\mainbar{
     
     \section[\faMortarBoard]{Education}
     \job{01/2019 - 12/2019}
@@ -145,15 +210,6 @@
     \medskip
     Tags must be ordered by hand with newlines to get a nice layout, especially for long tags.
     
-}
-\makebody
-\clearpage
-
-
-\pagestyle{highlightmain}
-\highlightbar{}
-\mainbar{
-
     \section{Another section}
     
     This page uses the page style \texttt{highlightmain} which shows the highlight bar (gray) and the main part (white background) but omits the header. 
