Add more info, update skill levels

--- a/resume.tex
+++ b/resume.tex
@@ -66,12 +66,12 @@
     \section{Skills}
     
     \skillsection{Management}
-    \skill{Training and\\knowledge transfer}{5}
+    \skill{Training and\\knowledge transfer}{4}
     \skill{Team leadership}{4}
     \skill{Project management}{5}
     (Stage-gate model, risk and time management)\\
-    \skill{International project\\management}{5}
-    \skill{Portfolio management}{5}
+    \skill{International project\\management}{4}
+    \skill{Portfolio management}{4}
     (Ingredient rationalisation, product database design, supplier management)\\
     \vspace{0.5em}
     
@@ -175,6 +175,23 @@
                 \item Team leadership
             \end{itemize}
         \end{itemize}}
+    
+    \job{Sep. 2005---Oct. 2008}
+        {Vital Health Foods, Cape Town}
+        {Formulation chemist}
+        {\begin{itemize}
+            \item Product and process development in registered pharmaceutical company
+            \item New product development from bench scale to full scale
+            \item Process support, troubleshooting and training
+        \end{itemize}}
+
+    \job{1997---2003}
+        {Solutions Technology /\\Benedict Technology Holdings, Cape Town}
+        {Process Engineer}
+        {\begin{itemize}
+            \item Process development and simulation
+            \item Pilot plant design and construction
+        \end{itemize}}
 
 }
 \makebody
@@ -186,14 +203,26 @@
 \mainbar{
     
     \section[\faMortarBoard]{Education}
-    \job{01/2019 - 12/2019}
-        {University, City}
-        {Bachelor of Something}
+    \job{2002---2007}
+        {University of Stellenbosch, South Africa}
+        {M.Sc. Biochemistry}
+        {``An investigation into the biological activity of rooibos (\textit{Aspalathus linearis}) extracts''}
+
+    \job{1992---1997}
+        {University of Stellenbosch, South Africa}
+        {B.Eng. (Chem)}
         {}
 
-    \section{Achievements, honours and awards}
-    \achievement{My first achievement}
-    \achievement{My second achievement}
+        \section{International experience}
+        \begin{itemize}
+            \item Customer training sessions in Poland, Mexico and USA
+            \item Regular factory trials and production support in
+              Nigeria, Egypt, Swaziland, Botswana, Spain, Great
+              Britain and Hungary
+            \item Three months job exchange in North America,
+              including product develoment in New Jersey and factory
+              trials in Puebla, Mexico
+        \end{itemize}
 
     \section{General Skills}
     \smallskip % additional skip because tag outlines use up space
