Add publications, first draft final

--- a/resume.tex
+++ b/resume.tex
@@ -224,74 +224,40 @@
               trials in Puebla, Mexico
         \end{itemize}
 
-    \section{General Skills}
-    \smallskip % additional skip because tag outlines use up space
-    \tag{Tag 1}
-    \tag{Tag 2}
-    \tag{and}
-    \tag{another tag}
-    \tag{some more tags}
-    \tag{yet another one}
-    \tag{tags flow over}
-    \tag{to the next line}
-    \tag{if necessary}
-    
-    \medskip
-    Tags must be ordered by hand with newlines to get a nice layout, especially for long tags.
-    
-    \section{Another section}
-    
-    This page uses the page style \texttt{highlightmain} which shows the highlight bar (gray) and the main part (white background) but omits the header. 
-    The default page style is \texttt{headerhighlightmain} with all three elements.
-    If you don't want header, nor highlight bar, use page style \texttt{\textbackslash pagestyle\{empty\}}.
-    \medskip
-    Neither main, nor highlight bar must be filled to make this template work.
-    It is possible to use a page style with the highlight bar but leave it empty by setting an empty highlightbar \texttt{\textbackslash highlightbar\{\}}.
+\section{Publications}
 
-    \vspace{0.5em}
-    \subsection{Subsection 1}
-    Demonstrate subsections.
-    
-    \subsection{Subsection 2}
-    Subsection are also bold face but a smaller font then section. They also omit the rule.
-    
+\publication
+	{An investigation into the biological activity of rooibos (\textit{Aspalathus linearis}) \mbox{extracts}} % Title
+	{\textbf{David Richfield}} % Authors
+	{Mar. 2008} % Year
+	{M.Sc. Thesis, University of Stellenbosch} % Journal
+	{\href{https://scholar.sun.ac.za/bitstream/handle/10019.1/3020/richfield_investigation_2008.pdf}{PDF}} % ADS & arxiv links
+
+\publication
+	{Recovery of trypsin inhibitor and soy milk protein concentration by dynamic filtration} % Title
+	{O. Akoum, \textbf{D. Richfield}, M.Y. Jaffrin, L.H. Ding, P. Swart } % Authors
+	{Aug. 2006} % Year
+	{Journal of Membrane Science} % Journal
+	{\href{https://doi.org/10.1016/j.memsci.2005.12.030}{https://doi.org/10.1016/j.memsci.2005.12.030}} % ADS & arxiv links
+
+\publication
+	{Recovery of trypsin inhibitor by soy milk ultrafiltration using a rotating disk system} % Title
+	{O. Akoum, \textbf{D. Richfield}, M.Y. Jaffrin, L.H. Ding, P. Swart } % Authors
+	{May 2006} % Year
+	{Desalination} % Journal
+	{\href{https://doi.org/10.1016/j.desal.2005.06.045}{https://doi.org/10.1016/j.desal.2005.06.045}} % ADS & arxiv links
+
+\publication
+	{Process for the production of a confectionery product having a sugar-free \mbox{coating}} % Title
+	{B. Hasslinger, \textbf{D. Richfield}, R. Zsembery} % Authors
+	{Apr. 2019} % Year
+	{Patent pending} % Journal
+	{\href{https://patents.google.com/patent/DE102019204936A1}{DE102019204936A1}} % ADS & arxiv links
 
 }
 \makebody
 
 
 \clearpage
-\pagestyle{empty}
-
-\section{Publications}
-\pubforcefullwidth
-
-Demonstrate what an \texttt{\textbackslash pagestyle\{empty\}} page looks like.
-Also show off the macros for publications that uses small icons for authors, date, journal and links.
-
-Achieving a good looking spacing can be tricky. For empty pagestyles where the full width is available use \texttt{\textbackslash pubforcefullwidth} to force the publoication list to take up all the available space.
-The (relative) lengths reserved for date, journal and links can be set with the parameters \texttt{\textbackslash pubdatelength}, \texttt{\textbackslash pubjournallength} and \texttt{\textbackslash publinklength} as in \texttt{\textbackslash setlength\{\textbackslash pubdatelength\}\{0.15 \textbackslash linewidth\}}.
-\bigskip
-
-\publication
-	{The turbulent gas structure in the centers of NGC~253 and the Milky Way} % Title
-	{\textbf{N. Krieger}, A. Bolatto, E. Koch, A. Leroy, E. Rosolowsky, F. Walter, A. Wei\ss, D. Eden, R. Levy, D. Meier, E. Mills, T. Moore, J. Ott, Y. Su, S. Veilleux} % Authors
-	{2020} % Year
-	{The Astrophysical Journal Vol. 899, Issue 2, id.158} % Journal
-	{\ADS{https://ui.adsabs.harvard.edu/abs/2020ApJ...899..158K}, \arXiv{https://arxiv.org/abs/2008.02518}} % ADS & arxiv links
-
-\publication
-	{The molecular ISM in the Super Star Clusters of the starburst NGC253} % Title
-	{\textbf{N. Krieger}, A. Bolatto, A. Leroy, R. Levy, E. Mills, D. Meier, S. Veilleux, F. Walter, A. Wei\ss} % Authors
-	{2020} % Year
-	{The Astrophysical Journal Vol.897, Issue 2, id.176} % Journal
-	{\ADS{https://ui.adsabs.harvard.edu/abs/2020ApJ...897..176K}, \arXiv{https://arxiv.org/abs/2006.08262}} % ADS & arxiv links
-
-\publication
-	{The Molecular Outflow in NGC\,253 at a Resolution of Two Parsecs} % Title
-	{\textbf{N. Krieger}, A. Bolatto, F. Walter, A. Leroy, L. Zschaechner, D. Meier, J. Ott, A. Wei\ss, E. Mills, S. Veilleux, M. Gorski} % Authors
-	{2019} % Year
-	{The Astrophysical Journal Vol.881, Issue 1, article id. 43, 20 pp} % Journal
-	{\ADS{https://ui.adsabs.harvard.edu/abs/2019ApJ...881...43K}, \arXiv{https://arxiv.org/abs/1907.00731}} % ADS & arxiv links
 
 \end{document}
