--- a/resume.tex
+++ b/resume.tex
@@ -106,7 +106,9 @@
 }
 \mainbar{
     \section{Professional Summary}
-    I am an NPD expert with over 15 years' experience in bringing innovative confectionery, supplement and food products to market in 8 countries on 3 continents.\\
+    I am an NPD expert with over 15 years' experience in bringing
+    innovative \mbox{confectionery}, supplement and food products to market
+    in 8 countries on 3 continents.\\
     I have a passion for mentoring, empowering and developing talent, which shows in my track record of effective team leadership.\\
     I am a technical expert, always keen to share my expertise. I have held highly impactful training sessions for internal teams as well as B2B customers at my last two companies.
     
