--- a/resume.tex
+++ b/resume.tex
@@ -59,7 +59,7 @@
     
     \email{davidrichfield@gmail.com}
     \phone{+49 176 7266 3368}
-    \location{Nabburgerstraße 8, 67549 Worms}
+    \location{Alzeyer Straße 8, 67549 Worms}
     \vspace{0.5em}
     \linkedin{David Richfield}{https://www.linkedin.com/in/david-richfield-5938714/}
     
@@ -69,10 +69,10 @@
     \skill{Training and\\knowledge transfer}{4}
     \skill{Team leadership}{4}
     \skill{Project management}{5}
-    (Stage-gate model, risk and time management)\\
+    (Stage-gate model, risk \&\\ time management)\\
     \skill{International project\\management}{4}
     \skill{Portfolio management}{4}
-    (Ingredient rationalisation, product database design, supplier management)\\
+    (Ingredient rationalisation,\\ product database design,\\ supplier management)
     \vspace{0.5em}
     
     \skillsection{Product Development}
@@ -85,7 +85,7 @@
     
     \skillsection{Technical}
     \skill{Product commercialisation}{5}
-    (Project management, factory support, troubleshooting)\\
+    (Project management,\\ factory support,\\ troubleshooting)\\
     \skill{Plant design}{4}
     (Design, construction, commissioning)\\
     \skill{Statistical Process Control}{4}
@@ -98,21 +98,24 @@
     \skill{Afrikaans}{5}
     \skill{German}{4}
     \skill{Dutch}{3}
-    \skill{French}{2}
-    \skill{Spanish}{2}
-    \skill{Russian}{1}
     \bigskip
     
 }
 \mainbar{
     \section{Professional Summary}
+    \setlength{\parindent}{1em}
     I am an NPD expert with over 15 years' experience in bringing
     innovative \mbox{confectionery}, supplement and food products to market
-    in 8 countries on 3 continents.\\
-    I have a passion for mentoring, empowering and developing talent, which shows in my track record of effective team leadership.\\
-    I am a technical expert, always keen to share my expertise. I have held highly impactful training sessions for internal teams as well as B2B customers at my last two companies.
+    in eight countries on three continents.
+
+    I have a passion for mentoring, empowering and developing talent,
+    which shows in my track record of effective team leadership.
+
+    I am a technical expert, always keen to share my expertise. I have
+    held highly impactful training sessions for internal teams as well
+    as B2B customers at my last two companies.
     
-    \section[\faGears]{Work history}
+    \section[]{Work history}
     \job{Mar. 2018---Present}
         {Südzucker AG, Neuoffstein}
         {Senior Manager,\\Confectionery Technology}
@@ -169,9 +172,9 @@
             \item Candy senior scientist
             \begin{itemize}
                 \item Regional hard candy expert: product and process development, troubleshooting
-                \item Candy R&D lead for consolidation of 3 manufacturing facilities in MENA
+                \item Candy R\&D lead for consolidation of 3 manufacturing facilities in MENA
             \end{itemize}
-            \item R&D development team leader
+            \item R\&D development team leader
             \begin{itemize}
                 \item Project management
                 \item Team leadership
@@ -204,7 +207,7 @@
 \highlightbar{}
 \mainbar{
     
-    \section[\faMortarBoard]{Education}
+    \section[]{Education}
     \job{2002---2007}
         {University of Stellenbosch, South Africa}
         {M.Sc. Biochemistry}
