--- a/resume.tex
+++ b/resume.tex
@@ -65,7 +65,7 @@
     
     \section{Skills}
     
-    \skillsection{Management}
+    \skillsection{Management skills}
     \skill{Training and\\knowledge transfer}{4}
     \skill{Team leadership}{4}
     \skill{Project management}{5}
@@ -75,7 +75,7 @@
     (Ingredient rationalisation,\\ product database design,\\ supplier management)
     \vspace{0.5em}
     
-    \skillsection{Product Development}
+    \skillsection{Product Development skills}
     \skill{Innovation}{5}
     (Ideation, prioritisation,\\ internal marketing)\\
     \skill{Confectionery}{5}
@@ -83,14 +83,14 @@
     \skill{Pharmaceutical}{3}
     \vspace{0.5em}
     
-    \skillsection{Technical}
+    \skillsection{Technical skills}
     \skill{Product commercialisation}{5}
-    (Project management,\\ factory support,\\ troubleshooting)\\
+    (Project management,\\ production support)\\
     \skill{Plant design}{4}
-    (Design, construction, commissioning)\\
+    (Design, construction,\\ commissioning)\\
     \skill{Statistical Process Control}{4}
     \skill{Analytical methods}{4}
-    (Chromatography, physical and organic chemistry)\\
+    (Chromatography, physical\\ \& organic chemistry)
     \vspace{0.5em}
     
     \skillsection{Languages}
@@ -114,10 +114,11 @@
     I am a technical expert, always keen to share my expertise. I have
     held highly impactful training sessions for internal teams as well
     as B2B customers at my last two companies.
+    \setlength{\parindent}{0em}
     
-    \section[]{Work history}
+    \section{Work history}
     \job{Mar. 2018---Present}
-        {Südzucker AG, Neuoffstein}
+        {Südzucker AG\\Neuoffstein}
         {Senior Manager,\\Confectionery Technology}
         {\begin{itemize}
             \item Leading confectionery application development team
@@ -143,7 +144,7 @@
         \end{itemize}}
 
     \job{Sep. 2013---Dec. 2017}
-        {Mondelēz International,\\Munich}
+        {Mondelēz International\\Munich}
         {Senior Scientist}
         {\begin{itemize}
             \item Productivity project manager
@@ -166,7 +167,7 @@
         \end{itemize}}
     
     \job{Nov. 2008---Aug. 2013}
-        {Cadbury / Kraft / Mondelēz,\\Johannesburg}
+        {Cadbury / Kraft / Mondelēz\\Johannesburg}
         {Senior Scientist}
         {\begin{itemize}
             \item Candy senior scientist
