Remove descriptions from skill list
Descriptions of skills were breaking visual unity and were strictly
speaking unnecessary.

--- a/resume.tex
+++ b/resume.tex
@@ -69,15 +69,12 @@
     \skill{Training and\\knowledge transfer}{4}
     \skill{Team leadership}{4}
     \skill{Project management}{5}
-    (Stage-gate model, risk \&\\ time management)\\
-    \skill{International project\\management}{4}
+    \skill{Intl. project management}{4}
     \skill{Portfolio management}{4}
-    (Ingredient rationalisation,\\ product database design,\\ supplier management)
     \vspace{0.5em}
     
     \skillsection{Product Development skills}
     \skill{Innovation}{5}
-    (Ideation, prioritisation,\\ internal marketing)\\
     \skill{Confectionery}{5}
     \skill{Supplements}{4}
     \skill{Pharmaceutical}{3}
@@ -85,12 +82,9 @@
     
     \skillsection{Technical skills}
     \skill{Product commercialisation}{5}
-    (Project management,\\ production support)\\
     \skill{Plant design}{4}
-    (Design, construction,\\ commissioning)\\
     \skill{Statistical Process Control}{4}
     \skill{Analytical methods}{4}
-    (Chromatography, physical\\ \& organic chemistry)
     \vspace{0.5em}
     
     \skillsection{Languages}
