General formatting tweaks

--- a/resume.tex
+++ b/resume.tex
@@ -97,7 +97,7 @@
 }
 \mainbar{
     \section{Professional Summary}
-    \setlength{\parindent}{1em}
+    \setlength{\parskip}{\baselineskip}
     I am an NPD expert with over 15 years' experience in bringing
     innovative \mbox{confectionery}, supplement and food products to market
     in eight countries on three continents.
@@ -108,7 +108,7 @@
     I am a technical expert, always keen to share my expertise. I have
     held highly impactful training sessions for internal teams as well
     as B2B customers at my last two companies.
-    \setlength{\parindent}{0em}
+    \setlength{\parskip}{0}
     
     \section{Work history}
     \job{Mar. 2018---Present}
@@ -121,13 +121,13 @@
             \item Supporting Marketing in developing sales tools and
               marketing campaign materials
             \item Providing technical guidance and leadership on
-              confectionery applications to Nutritional Communications
+              confectionery applications to Nutritional \mbox{Communications}
               team
             \item Supporting the Customer Technical Service team in
               providing solutions to our customers
             \item Providing training on production technology and
               product attributes to key customers in Poland, USA and
-              Mexico, and at workshops (e.g. training on glass
+              Mexico, and at workshops (e.g.\ training on glass
               transition phenomena at technical school)
             \item Mentoring students and trainees in their academic
               and professional development
@@ -179,15 +179,6 @@
                 \item Team leadership
             \end{itemize}
         \end{itemize}}
-    
-    \job{Sep. 2005---Oct. 2008}
-        {Vital Health Foods, Cape Town}
-        {Formulation chemist}
-        {\begin{itemize}
-            \item Product and process development in registered pharmaceutical company
-            \item New product development from bench scale to full scale
-            \item Process support, troubleshooting and training
-        \end{itemize}}
 
 }
 \makebody
@@ -197,6 +188,16 @@
 \pagestyle{highlightmain}
 \highlightbar{}
 \mainbar{
+    \section{Work history (cont.)}
+    
+    \job{Sep. 2005---Oct. 2008}
+        {Vital Health Foods, Cape Town}
+        {Formulation chemist}
+        {\begin{itemize}
+            \item Product and process development in registered pharmaceutical company
+            \item New product development from bench scale to full scale
+            \item Process support, troubleshooting and training
+        \end{itemize}}
     
     \job{1997---2003}
         {Benedict Technology Holdings /\\Solutions Technology, Cape Town}
