--- a/resume.tex
+++ b/resume.tex
@@ -208,12 +208,12 @@
         \end{itemize}}
 
     \section[]{Education}
-    \job{2002---2007}
+    \school{2002---2007}
         {University of Stellenbosch, South Africa}
         {M.Sc. Biochemistry}
         {}
 
-    \job{1992---1997}
+    \school{1992---1997}
         {University of Stellenbosch, South Africa}
         {B.Eng. (Chem)}
         {}
