Move name a bit down
The author of the template had gone to great lengths to align the top
of the name with the top of the photo. My advisor disagrees with this,
so I've cut that code out and moved the name down a bit.

--- a/my-resume.cls
+++ b/my-resume.cls
@@ -59,7 +59,8 @@
 
 \RequirePackage{silence}
 
-% The page header is deliberately disabled in my-resume, so the warning by scrlayer-scrpage is invalid. 
+% The page header is deliberately disabled in my-resume, so the warning by
+% scrlayer-scrpage is invalid. 
 \WarningFilter{scrlayer-scrpage}{Very small head height detected!}
 
 
@@ -239,19 +240,10 @@
 \newcommand{\tagline}[1]{\def\@tagline{#1}}
 \newcommand{\photo}[3][]{\def\@photo{#2}\def\@photodiameter{#3}\def\@photoformat{#1}}
 
-% try to align the top of the written out name with the top of the photo
-% it is impossible to get the actual height of a line to determine the offset between line top and charachter top
-% therefore use a bad workaround by setting the line height to 1.5 times the character height
-\newlength{\@namefontheight}
-\newlength{\@namelineheight}
-\settoheight{\@namefontheight}{\Huge\bfseries\MakeUppercase{A}}
-\setlength\@namelineheight{1.5\@namefontheight}
-
 % assemble the header
 \newcommand{\makeheader}{% header bar is a minipage
     \begin{minipage}[t][\headerheight]{\textwidth}%
         % \vspace{-1em}
-        \vspace{\dimexpr \@namefontheight-\@namelineheight}                     % align top of name and photo
         % create two minipages for header text and photo if photo is given
         \ifdef{\@photodiameter}{
             \begin{minipage}[t]{\dimexpr \textwidth-\@photodiameter}        % to top align name and photo add [t] here
@@ -259,6 +251,7 @@
             }{}
             % print the header text
                 \begin{minipage}[t][2em]{\linewidth}
+                \vspace{1.5em}%
                     {\Huge\bfseries\color{headerfontcolor}\MakeUppercase{\@name}\par}
                 \end{minipage}%
                 \vfill%
