Whole publication was rendered as textbf. Fix.

--- a/my-resume.cls
+++ b/my-resume.cls
@@ -473,7 +473,7 @@
 \pubdefaultspacing
 
 \newcommand{\publication}[5]{%
-    \textbf{\normalsize \color{emphasis}#1\par}
+    \normalsize \color{emphasis}\textbf{#1}\par
     \vspace{0.1em}%
         \ifstrequal{#2}{}{}{\footnotesize #2 \par}
         \ifstrequal{#4}{}{}{\footnotesize #4 \par}
